Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49557

Crash when creating WebEngineProfile QML type outside of WebEngineView

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.0 RC
    • 5.6.0 Alpha
    • WebEngine
    • None
    • e68d1ad06599eae1b0785263f3a0863701e6f1bc

    Description

      Creating a WebEngineProfile QML type before a QWebEngineView leads to an assert on startup:

      [1120/093414:FATAL:at_exit.cc(53)] Check failed: false. Tried to RegisterCallback without an AtExitManager
      Backtrace:
      	base::debug::StackTrace::StackTrace [0x11B07CC1+33] (d:\dev\qt\5.6\src\qtwebengine\src\3rdparty\chromium\base\debug\stack_trace_win.cc:205)
      	logging::LogMessage::~LogMessage [0x11A5913F+63] (d:\dev\qt\5.6\src\qtwebengine\src\3rdparty\chromium\base\logging.cc:544)
      	base::AtExitManager::RegisterTask [0x11A882C0+160] (d:\dev\qt\5.6\src\qtwebengine\src\3rdparty\chromium\base\at_exit.cc:54)
      	base::AtExitManager::RegisterCallback [0x11A88206+230] (d:\dev\qt\5.6\src\qtwebengine\src\3rdparty\chromium\base\at_exit.cc:47)
      	base::internal::CompleteLazyInstance [0x11A89936+38] (d:\dev\qt\5.6\src\qtwebengine\src\3rdparty\chromium\base\lazy_instance.cc:51)
      	base::LazyInstance<std::unordered_map<std::pair<int,int>,content::RenderWidgetHostImpl *,std::hash<std::pair<int,int> >,std::equal_to<std::pair<int,int> >,std::allocator<std::pair<std::pair<int,int> const ,content::RenderWidgetHostImpl *> > >,base::Defaul [0x10712B6B+155] (d:\dev\qt\5.6\src\qtwebengine\src\3rdparty\chromium\base\lazy_instance.h:165)
      	content::RenderWidgetHost::GetRenderWidgetHosts [0x1070DA4E+78] (d:\dev\qt\5.6\src\qtwebengine\src\3rdparty\chromium\content\browser\renderer_host\render_widget_host_impl.cc:263)
      	content::WebContentsImpl::GetAllWebContents [0x10690F1E+46] (d:\dev\qt\5.6\src\qtwebengine\src\3rdparty\chromium\content\browser\web_contents\web_contents_impl.cc:509)
      	QtWebEngineCore::BrowserContextAdapter::setHttpUserAgent [0x10167A16+150] (d:\dev\qt\5.6\src\qtwebengine\src\core\browser_context_adapter.cpp:255)
      	QQuickWebEngineProfile::setHttpUserAgent [0x51CFA6C0+96] (d:\dev\qt\5.6\src\qtwebengine\src\webengine\api\qquickwebengineprofile.cpp:308)
      	QQuickWebEngineProfile::qt_static_metacall [0x51D1AF1D+957] (d:\dev\qt\5.6\msvc-2015-32\qtwebengine\src\webengine\.moc\debug\moc_qquickwebengineprofile_p.cpp:312)
      	QQuickWebEngineProfile::qt_metacall [0x51D1AAEA+186] (d:\dev\qt\5.6\msvc-2015-32\qtwebengine\src\webengine\.moc\debug\moc_qquickwebengineprofile_p.cpp:360)
      	QMetaObject::metacall [0x6660A490+96] (d:\dev\qt\5.6\src\qtbase\src\corelib\kernel\qmetaobject.cpp:296)
      	QQmlObjectCreator::setPropertyValue [0x77D28A03+1347] (d:\dev\qt\5.6\src\qtdeclarative\src\qml\qml\qqmlobjectcreator.cpp:350)
      	QQmlObjectCreator::setPropertyBinding [0x77D284A3+5075] (d:\dev\qt\5.6\src\qtdeclarative\src\qml\qml\qqmlobjectcreator.cpp:954)
      	QQmlObjectCreator::setupBindings [0x77D270A4+1092] (d:\dev\qt\5.6\src\qtdeclarative\src\qml\qml\qqmlobjectcreator.cpp:695)
      	QQmlObjectCreator::populateInstance [0x77D26B86+870] (d:\dev\qt\5.6\src\qtdeclarative\src\qml\qml\qqmlobjectcreator.cpp:1307)
      	QQmlObjectCreator::createInstance [0x77D26792+3090] (d:\dev\qt\5.6\src\qtdeclarative\src\qml\qml\qqmlobjectcreator.cpp:1152)
      	QQmlObjectCreator::setPropertyBinding [0x77D274BF+1007] (d:\dev\qt\5.6\src\qtdeclarative\src\qml\qml\qqmlobjectcreator.cpp:741)
      	QQmlObjectCreator::setupBindings [0x77D270A4+1092] (d:\dev\qt\5.6\src\qtdeclarative\src\qml\qml\qqmlobjectcreator.cpp:695)
      	QQmlObjectCreator::populateInstance [0x77D26B86+870] (d:\dev\qt\5.6\src\qtdeclarative\src\qml\qml\qqmlobjectcreator.cpp:1307)
      	QQmlObjectCreator::createInstance [0x77D26792+3090] (d:\dev\qt\5.6\src\qtdeclarative\src\qml\qml\qqmlobjectcreator.cpp:1152)
      	QQmlObjectCreator::create [0x77D24F76+902] (d:\dev\qt\5.6\src\qtdeclarative\src\qml\qml\qqmlobjectcreator.cpp:197)
      	QQmlComponentPrivate::beginCreate [0x77C97DDB+667] (d:\dev\qt\5.6\src\qtdeclarative\src\qml\qml\qqmlcomponent.cpp:863)
      	QQmlComponent::beginCreate [0x77C96C32+98] (d:\dev\qt\5.6\src\qtdeclarative\src\qml\qml\qqmlcomponent.cpp:813)
      	QQmlComponent::create [0x77C96B97+87] (d:\dev\qt\5.6\src\qtdeclarative\src\qml\qml\qqmlcomponent.cpp:772)
      	QQmlApplicationEnginePrivate::_q_finishLoad [0x77D1C7DA+282] (d:\dev\qt\5.6\src\qtdeclarative\src\qml\qml\qqmlapplicationengine.cpp:130)
      	QQmlApplicationEnginePrivate::startLoad [0x77D1C3F0+144] (d:\dev\qt\5.6\src\qtdeclarative\src\qml\qml\qqmlapplicationengine.cpp:110)
      	QQmlApplicationEngine::load [0x77D1BF8C+44] (d:\dev\qt\5.6\src\qtdeclarative\src\qml\qml\qqmlapplicationengine.cpp:250)
      	main [0x00F923AE+158] (d:\dev\qtwebengine-examples\webengine\qtquick_minimal\main.cpp:12)
      	WinMain [0x00F9448D+173] (d:\dev\qt\5.6\src\qtbase\src\winmain\qtmain_win.cpp:113)
      	invoke_main [0x00F9338E+30] (f:\dd\vctools\crt\vcstartup\src\startup\exe_common.inl:109)
      	__scrt_common_main_seh [0x00F931DA+346] (f:\dd\vctools\crt\vcstartup\src\startup\exe_common.inl:264)
      	__scrt_common_main [0x00F9306D+13] (f:\dd\vctools\crt\vcstartup\src\startup\exe_common.inl:309)
      	WinMainCRTStartup [0x00F933A8+8] (f:\dd\vctools\crt\vcstartup\src\startup\exe_winmain.cpp:17)
      	BaseThreadInitThunk [0x76843744+36]
      	RtlSetCurrentTransaction [0x7770A064+212]
      	RtlSetCurrentTransaction [0x7770A02F+159]
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kkohne Kai Köhne
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes