Force creation of default WebEngineProfile

Make sure that the default QWebEngineProfile is created first. This
creates the default WebEngineContext, which in turn initializes global
things like AtExitManager.

Task-number: QTBUG-49557
Change-Id: I9e8f6bd24edd7f4c7e8bb38d91a2c09631824828
Reviewed-by: Michael Brüning <michael.bruning@theqtcompany.com>